# remark-drop

./: .env.example  .gitignore  DIGITALOCEAN_QUICK_REFERENCE.md  DROPBOX_SETUP.md  MAILGUN_SETUP.md  README.md  dropbox_uploader.py  emailer.py  extractor.py  main.py  pyproject.toml  test_formatting.py  test_scrape.py
android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/inkdrop/app/: InkDropApplication.kt  MainActivity.kt  ShareReceiverActivity.kt
android/app/src/main/java/com/inkdrop/app/data/: InkDropApi.kt  SettingsRepository.kt
android/app/src/main/java/com/inkdrop/app/di/: AppModule.kt
android/app/src/main/java/com/inkdrop/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/com/inkdrop/app/ui/share/: ShareViewModel.kt
android/app/src/main/java/com/inkdrop/app/ui/theme/: Theme.kt
android/app/src/main/java/com/inkdrop/app/util/: NotificationHelper.kt  UrlValidator.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
deploy/: DIGITALOCEAN_SETUP.md  digitalocean-deploy.sh  remark-drop.service  setup.sh
